@@ -31,7 +31,6 @@ PERFORMANCE OF THIS SOFTWARE.
 void
 testMM(void)
 {
-#ifndef __SDCC_pdk15 // Bug #2990: Invalid asm generated for --stack-auto
   int x=1, y=2;
   uintptr_t ux = (uintptr_t)&x;
   uintptr_t uy = (uintptr_t)&y;
@@ -44,6 +43,5 @@ testMM(void)
     ASSERT (*p == *q);
     ASSERT (*p == y);
   }
-#endif
 }
 
