@@ -31,7 +31,7 @@ void
 testMM(void)
 {
 #ifndef __SDCC_stm8 // Bug #2989: Crash in codegen
-#ifndef __SDCC_pdk15 // Bug 2990: Invalid asm generated for --stack-auto
+#ifndef __SDCC_pdk15 // Bug #2992: Invalid asm generated for --stack-auto
   int x=1, y=2;
   int *p = &x;
   int *q = &y;
